# Customer-Churn-Prediction

./: CustomerChurnProject.ipynb  README.md  Untitled1.ipynb  customer_churn_project.ipynb  pyproject.toml  test.py
.ipynb_checkpoints/: CustomerChurnPrediction -Workflow-checkpoint.txt  CustomerChurnProject-checkpoint.ipynb  README-checkpoint.md  customer_churn_project-checkpoint.ipynb  main-checkpoint.py
