[project]
name = "uvsample01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.15.0",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyjokes>=0.8.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.46.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
]
